# netflix/netflix-api/src/api/controllers/user.controller.ts
@@ -1,10 +1,18 @@
 import { NextFunction, Request, Response } from "express";
 import { videoRepository } from "../services/video.repository";
 import { queueRepository } from "../services/queue.repository";
-import { sessionRepository } from "../services/session.repository";
+import { deleteApiKeyFromConsumer } from "../services/kong.service";
+import { userRepository } from "../services/user.repository";
 
 export async function getVideos(req: Request, res: Response) {
-  const isFilteredByPublished = req.res!.locals.userId ? true : false;
+  const sessionId = req.headers["x-session-id"] as string;
+  const username = req.headers["x-consumer-username"] as string;
+  const validUserId = await userRepository.getUserIdByUsername(username);
+  if (sessionId && validUserId === undefined) {
+    res.status(401).json();
+    return;
+  }
+  const isFilteredByPublished = !!sessionId;
   const title = req.query.title as string | undefined;
   const videos = await videoRepository.findMany(title, isFilteredByPublished);
   res.json(videos);
@@ -12,9 +20,14 @@ export async function getVideos(req: Request, res: Response) {
 
 export async function addVideoToQueue(req: Request, res: Response, next: NextFunction) {
   try {
+    const username = req.headers["x-consumer-username"] as string;
+    const validUserId = await userRepository.getUserIdByUsername(username);
+    if (validUserId === undefined) {
+      res.status(401).json();
+      return;
+    }
     const videoId = req.body.videoId;
-    const userId = req.res!.locals.userId;
-    const videos = await queueRepository.add(userId, videoId);
+    const videos = await queueRepository.add(validUserId, videoId);
     res.status(201).json(videos);
   } catch (err) {
     next(err);
@@ -23,9 +36,14 @@ export async function addVideoToQueue(req: Request, res: Response, next: NextFun
 
 export async function getQueue(req: Request, res: Response, next: NextFunction) {
   try {
+    const username = req.headers["x-consumer-username"] as string;
+    const validUserId = await userRepository.getUserIdByUsername(username);
+    if (validUserId === undefined) {
+      res.status(401).json();
+      return;
+    }
     const order = String(req.query.order);
-    const userId = req.res!.locals.userId;
-    const videos = await queueRepository.get(userId, order);
+    const videos = await queueRepository.get(validUserId, order);
     res.json(videos);
   } catch (err) {
     next(err);
@@ -35,7 +53,13 @@ export async function getQueue(req: Request, res: Response, next: NextFunction) 
 export async function logout(req: Request, res: Response, next: NextFunction) {
   try {
     const sessionId = req.headers["x-session-id"] as string;
-    await sessionRepository.delete(sessionId);
+    const username = req.headers["x-consumer-username"] as string;
+    const validUserId = await userRepository.getUserIdByUsername(username);
+    if (validUserId === undefined) {
+      res.status(401).json();
+      return;
+    }
+    await deleteApiKeyFromConsumer(username, sessionId);
     res.json();
   } catch (err) {
     next(err);
